Add linkedin profile link to top nav

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,8 +10,14 @@
           <a href="/about">About Me</a>
         </li>
         <li>
-          <a href="https://github.com/nisanth074" target="_blank">
-            Github
+          <a href="https://github.com/nisanthchunduru" target="_blank">
+            GitHub
+            <i style="height: 13px; width: 13px; vertical-align: middle; margin-top: -4px; margin-left: -1px;" data-feather="external-link"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/nisanthchunduru" target="_blank">
+            LinkedIn
             <i style="height: 13px; width: 13px; vertical-align: middle; margin-top: -4px; margin-left: -1px;" data-feather="external-link"></i>
           </a>
         </li>
