--- a/static/css/main.css
+++ b/static/css/main.css
@@ -69,7 +69,6 @@ blockquote {
 
 a {
   text-decoration: none;
-  color: #0FACF3;
 }
 
 pre {
@@ -225,7 +224,11 @@ Header
 
 .post-date {
   line-height: 1.6767rem;
-  color: #3ABBF5;
+}
+
+a, .post-date {
+  /* color: #3ABBF5; */
+  color: #0066FF;
 }
 
 .post-content {
