Modify styling so images in posts occupy entire available width

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -241,6 +241,10 @@ a, .post-date {
   margin-bottom: 20px;
 }
 
+.post-content img {
+  width: 100%;
+}
+
 .notice {
   line-height: 2;
   padding: 20px;
