Rename url "/library" as "/content-i-like"

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,7 @@
           <a href="/about">About Me</a>
         </li>
         <li>
-          <a href="/library">Books I like</a>
+          <a href="/content-i-like">Content I like</a>
         </li>
         <li>
           <a href="https://github.com/nisanthchunduru" target="_blank">
