Rename page "Content I like" as "Library"

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,7 @@
           <a href="/about">About Me</a>
         </li>
         <li>
-          <a href="/content-i-like">Content I like</a>
+          <a href="/library">Library</a>
         </li>
         <li>
           <a href="https://github.com/nisanthchunduru/nisanthchunduru.github.io" target="_blank">
