--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,10 @@
       <a class="logo" href="/"><h1 class="logo-text">NC</h1></a>
       <ul>
         <li>
-          <a href="/about">About Me</a>
+          <a href="/about">About</a>
+        </li>
+        <li>
+          <a href="/hire">Hire</a>
         </li>
         <li>
           <a href="/library">Library</a>
