Add a "Jots" page

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,13 +4,16 @@
       <a class="logo" href="/"><h1 class="logo-text">NC</h1></a>
       <ul style="display: flex;">
         <li>
+          <a href="/jots">Jots</a>
+        </li>
+        <li>
+          <a href="/library">Library</a>
+        </li>
+        <li>
           <a href="/about">About</a>
         </li>
         <li>
           <a href="/hire">Hire</a>
-        </li>
-        <li>
-          <a href="/library">Library</a>
         </li>
         <li>
           <a href="https://github.com/nisanthchunduru/nisanthchunduru.github.io" target="_blank">
