Add a google site verification meta tag so Google Search Console can verify ownership

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,4 +21,6 @@
 
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/main.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/pygments-github.css"> <!-- Custom syntax highlighting -->
+
+  <meta name="google-site-verification" content="CIGnBZCqH2WX_UMtk5WQP3UJg6UIk_2HNNlBAnLFatA" />
 </head>
