Change font and home page layout

--- a/layouts/jots/list.html
+++ b/layouts/jots/list.html
@@ -6,6 +6,7 @@
 
     <div class="main frame">
       <div class="page bit-60">
+        <h2>Jots</h2>
         <div class="posts-list">
           {{ range where .Site.RegularPages "Type" "jots" }}
             {{ if ne .Draft true }}
