--- a/static/css/main.css
+++ b/static/css/main.css
@@ -42,8 +42,7 @@ h1 {
 h2 {
   color: #222;
 
-  margin-top: 23px;
-  margin-bottom: 34.5px;
+  margin-top: 1.5rem;
 }
 
 h3 {
@@ -59,7 +58,7 @@ p, ul {
 }
 
 p {
-  margin-top: 1.2em;
+  margin-top: 1.25rem;
 }
 p:nth-of-type(1) {
   margin-top: 0;
