Update intro message on home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
       <div class="page bit-60">
         <div>
           <h1>Hi, I'm Nisanth 👋</h1>
-          <p style="font-size: 1.5rem; margin-top: 0.75rem;">I’m an Engineering Lead proficient in a Full-stack development and passionate about AI/ML. Welcome to my corner of the web!</p>
+          <p style="font-size: 1.5rem; margin-top: 0.75rem;">I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML. Welcome to my corner of the web!</p>
         </div>
         <div style="margin-top: 2rem; border-top: 1px solid lightgray;" class="posts-list">
           <h2 style="margin-top: 2rem;">Posts</h2>
