Do away with the "Go Back" link and instead add a "Home" link to the nav bar

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,11 +1,10 @@
 <div class="frame">
   <div class="header bit-60">
     <nav class="top-nav bit-100" style="overflow: scroll;">
-      <!-- <a class="logo" href="/"><h1 class="logo-text">NC</h1></a> -->
-      {{ if ne .Page.RelPermalink "/" }}
-        <a style="font-size: 1.15rem; margin-right: 1.5rem;" class="logo" href="/">Back Home</h1></a>
-      {{ end }}
       <ul style="display: flex;">
+        <li>
+          <a href="/">Home</a>
+        </li>
         <li>
           <a href="/jots">Jots</a>
         </li>
