--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,41 +22,35 @@ h2 {
   font-size: 2.15rem;
 }
 h3 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
 h4 {
-  font-size: 1.25em;
+  font-size: 1.25rem;
+}
+h1, h2, h3, h4, h5, h6 {
+  color: #121212;
 }
 p {
-  font-size: 1em;
+  font-size: 1.15rem;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: 'system-ui';
   line-height: 1.25;
 }
-
-h1 {
-  color: #121212;
-}
-
-h2 {
-  color: #222;
-
-  margin-top: 1.5rem;
-}
-
-h3 {
-  color: #222;
-
-  margin-top: 34.5px;
-}
-
-p, ul {
+p, li {
+  font-size: 1.15rem;
   font-weight: normal;
   line-height: 1.76;
   color: #313131;
 }
 
+h2 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+h3 {
+  margin-top: 1.5rem;
+}
 p {
   margin-top: 1.25rem;
 }
@@ -64,6 +58,9 @@ p:nth-of-type(1) {
   margin-top: 0;
 }
 
+ol {
+  margin-left: 1rem;
+}
 li {
   line-height: 1.75;
 }
@@ -79,10 +76,9 @@ a {
 }
 
 pre {
-  margin-top: 34.5px;
-  margin-bottom: 34.5px;
-  padding-left: 34.5px;
-  padding-left: 34.5px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding-left: 2rem;
 
   overflow-y: hidden;
   overflow-x: auto;
@@ -90,7 +86,7 @@ pre {
 
 code {
   font-family: Monaco, monospace;
-  font-size: 13.2px;
+  font-size: 1rem;
   line-height: 1.5;
 }
 
@@ -239,6 +235,7 @@ Header
 }
 
 .post-date {
+  font-size: 1rem;
   line-height: 1.6767rem;
 }
 
