--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -4,10 +4,8 @@
   <body>
     {{ partial "header.html" . }}
 
-    <div class="main frame">
-      <div class="page bit-60">
-        {{ .Content }}
-      </div>
+    <div class="container mx-auto px-4 mt-12 prose prose-lg">
+      {{ .Content }}
     </div>
 
     {{ partial "foot.html" . }}
