--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,23 +4,21 @@
   <body>
     {{ partial "header.html" . }}
 
-    <div class="main frame">
-      <div class="page bit-60">
-        <div>
-          <h1>Hi, I'm Nisanth 👋</h1>
-          <p style="font-size: 1.5rem; margin-top: 0.75rem;">I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML. Welcome to my corner of the web!</p>
-        </div>
-        <div style="margin-top: 2rem; border-top: 1px solid lightgray;" class="posts-list">
-          <h2 style="margin-top: 2rem;">Posts</h2>
-          {{ range where .Site.RegularPages "Type" "posts" }}
-            {{ if ne .Draft true }}
-              <div class="post-summary">
-                <h3 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
-                {{ partial "posts/date.html" . }}
-              </div>
-            {{ end }}
+    <div class="container mt-12 px-4 prose prose-lg">
+      <div>
+        <h1>Hi, I'm Nisanth 👋</h1>
+        <h3 class="font-normal">I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML. Welcome to my corner of the web!</h3>
+      </div>
+      <div style="margin-top: 2rem; border-top: 1px solid lightgray;">
+        <h2 style="margin-top: 2rem;">Posts</h2>
+        {{ range where .Site.RegularPages "Type" "posts" }}
+          {{ if ne .Draft true }}
+            <div class="article-summary">
+              <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+              {{ partial "posts/date.html" . }}
+            </div>
           {{ end }}
-        </div>
+        {{ end }}
       </div>
     </div>
 
