--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,11 +11,11 @@
 
   <!-- Vendor stylesheets -->
 
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/vendor/lemonade.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/bower_components/normalize.css/normalize.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/lemonade-custom.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/reset.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/components/message.min.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/tailwind.compiled.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
   <!-- Custom stylesheets -->
 
