--- a/layouts/partials/posts/date.html
+++ b/layouts/partials/posts/date.html
@@ -1,1 +1,1 @@
-<p class="post-date">{{ .Date.Format "January 2, 2006" }}</p>
+<p class="article-date -mt-2">{{ .Date.Format "January 2, 2006" }}</p>
