Set viewport width to device width so the blog adjusts to smaller screens (like mobile screens in portrait mode)

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,4 +1,6 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Nisanth Chunduru</title>
   <link rel="shortcut icon" href="/favicon-a409055.ico">
 
