--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    {{ partial "foot.html" . }}
+    {{ partial "footer.html" . }}
 
     <script type="text/javascript" src="{{ .Site.BaseURL }}/js/main.js"></script>
   </body>
