--- a/layouts/jots/list.html
+++ b/layouts/jots/list.html
@@ -18,7 +18,7 @@
       </div>
     </div>
 
-    {{ partial "foot.html" . }}
+    {{ partial "footer.html" . }}
 
     <script type="text/javascript" src="{{ .Site.BaseURL }}/js/main.js"></script>
   </body>
