--- a/layouts/jots/list.html
+++ b/layouts/jots/list.html
@@ -4,7 +4,7 @@
   <body>
     {{ partial "header.html" . }}
 
-    <div class="container mx-auto px-4 mt-12 prose prose-lg">
+    <div class="container px-4 mt-12 prose prose-lg">
       <h1>Jots</h1>
       <div>
         {{ range where .Site.RegularPages "Type" "jots" }}
