--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto mt-8 px-4">
+<div class="container mt-8 px-4">
   <nav class="flex justify-between overflow-hidden">
     <div>
       <a href="/">
