Modify main.css so links in an article text appear in orange color like everywhere else

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
         {{ range where .Site.RegularPages "Type" "posts" }}
           {{ if ne .Draft true }}
             <div class="article-summary">
-              <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+              <h3><a style="color: #000000 !important;" href="{{ .Permalink }}">{{ .Title }}</a></h1>
               {{ partial "posts/date.html" . }}
             </div>
           {{ end }}
