--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -4,7 +4,7 @@
   <body>
     {{ partial "header.html" . }}
 
-    <div class="container mt-12 px-4 prose prose-lg">
+    <div class="container mt-12 px-4 prose sm:prose-lg">
       <div class="article">
         <h1>{{ .Title }}</h1>
         <p class="article-date -mt-6">{{ .Date.Format "January 2, 2006" }}</p>
