--- a/layouts/jots/single.html
+++ b/layouts/jots/single.html
@@ -4,7 +4,7 @@
   <body>
     {{ partial "header.html" . }}
 
-    <div class="container px-4 mt-12 prose prose-lg">
+    <div class="container px-4 mt-12 prose sm:prose-lg">
       <div class="article">
         <h1>{{ .Title }}</h1>
         <p class="article-date -mt-6">{{ .Date.Format "January 2, 2006" }}</p>
