Improve nav hamburger menu styling

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
         <h1>Hi, I'm Nisanth 👋</h1>
         <h3 class="font-normal">I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML. Welcome to my corner of the web!</h3>
       </div>
-      <div style="margin-top: 2rem; border-top: 1px solid lightgray;">
+      <div class="border-t" style="margin-top: 2rem;">
         <h2 style="margin-top: 2rem;">Posts</h2>
         {{ range where .Site.RegularPages "Type" "posts" }}
           {{ if ne .Draft true }}
