Increase margin above nav hamburger menu

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -44,7 +44,7 @@
     </div>
   </nav>
 
-  <div id="nav-hamburger-menu" class="hidden sm:hidden -ml-4 -mr-4 py-3 bg-white text-xl text-center">
+  <div id="nav-hamburger-menu" class="hidden sm:hidden -ml-4 -mr-4 mt-4 py-3 bg-white text-xl text-center">
     <ul>
       <li class="border-t">
         <a class="inline-block w-full" href="/jots">
