--- a/layouts/jots/list.html
+++ b/layouts/jots/list.html
@@ -9,7 +9,7 @@
       <div>
         {{ range where .Site.RegularPages "Type" "jots" }}
           {{ if ne .Draft true }}
-            <div class="article-summary">
+            <div>
               <h3 style="margin-bottom: 0px;">
                 <a style="color: #000000 !important;" href="{{ .Permalink }}">{{ .Title }}</a>
               </h3>
