--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,7 +2,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Nisanth Chunduru</title>
-  <link rel="shortcut icon" href="/favicon-a409055.ico">
+  <link rel="shortcut icon" href="/images/logo.svg">
 
   <!-- Fonts -->
 
