Centre article title and date

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -6,8 +6,8 @@
 
     <div class="container mt-12 px-4 prose sm:prose-lg">
       <div class="article">
-        <h1 style="margin-bottom: 0.5rem;">{{ .Title }}</h1>
-        <p class="article-date" style="margin-top: 0.5rem">{{ .Date.Format "January 2, 2006" }}</p>
+        <h1 class="text-center" style="margin-bottom: 0.5rem;">{{ .Title }}</h1>
+        <p class="article-date text-center" style="margin-top: 0.5rem">{{ .Date.Format "January 2, 2006" }}</p>
 
         <div class="article-content">{{ .Content }}</div>
       </div>
