Add back buttons for improved navigation and centre titles for better appearance

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
   <body>
     {{ partial "header.html" . }}
 
-    <div class="container mt-12 px-4 prose sm:prose-lg">
+    <div class="container mt-12 px-4 prose sm:prose-lg text-center">
       <div>
         <h1>Hi, I'm Nisanth 👋</h1>
         <h3 class="font-normal">I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML. Welcome to my corner of the web!</h3>
