--- a/layouts/jots/list.html
+++ b/layouts/jots/list.html
@@ -4,9 +4,19 @@
   <body>
     {{ partial "header.html" . }}
 
-    <div class="container px-4 mt-12 prose sm:prose-lg">
-      <h1>Jots</h1>
-      <div>
+    <div class="container px-4 mt-8 prose sm:prose-lg">
+      <a href="/" class="inline-flex items-center py-2 px-4 border rounded-full mb-4">
+        <svg class="h-2 w-2" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+          <path d="m 12 2 c 0 -0.265625 -0.105469 -0.519531 -0.292969 -0.707031 c -0.390625 -0.390625 -1.023437 -0.390625 -1.414062 0 l -6 6 c -0.1875 0.1875 -0.292969 0.441406 -0.292969 0.707031 s 0.105469 0.519531 0.292969 0.707031 l 6 6 c 0.390625 0.390625 1.023437 0.390625 1.414062 0 c 0.1875 -0.1875 0.292969 -0.441406 0.292969 -0.707031 s -0.105469 -0.519531 -0.292969 -0.707031 l -5.292969 -5.292969 l 5.292969 -5.292969 c 0.1875 -0.1875 0.292969 -0.441406 0.292969 -0.707031 z m 0 0" fill="#2e3436"/>
+        </svg>
+        <span class="ml-2 text-sm">
+          Back to Home
+        </span>
+      </a>
+
+      <h1 class="text-center">Jots</h1>
+
+      <div class="text-center">
         {{ range where .Site.RegularPages "Type" "jots" }}
           {{ if ne .Draft true }}
             <div>
