Rename page "Library" as "Resources" for clarity

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,7 +12,7 @@
           <a href="/jots">Jots</a>
         </li>
         <li class="mr-8">
-          <a href="/library">Library</a>
+          <a href="/resources">Resources</a>
         </li>
         <li class="mr-8">
           <a href="/about">About</a>
@@ -52,8 +52,8 @@
         </a>
       </li>
       <li class="border-t">
-        <a class="inline-block w-full" href="/library">
-          <span class="inline-block my-3">Library</span>
+        <a class="inline-block w-full" href="/resources">
+          <span class="inline-block my-3">Resources</span>
         </a>
       </li>
       <li class="border-t">
