Add a subtitle to the "Jots" page

--- a/layouts/jots/list.html
+++ b/layouts/jots/list.html
@@ -14,7 +14,11 @@
         </span>
       </a>
 
-      <h1 class="text-center">Jots</h1>
+      <h1 class="text-center" style="margin-bottom: 0;">Jots</h1>
+
+      <h4 class="text-center font-normal" style="margin-top: 1rem;">Notes, tips & tricks that are too small to be blog posts</h2>
+
+      <div class="border-t border-gray-200" style="margin-top: 2rem;"></div>
 
       <div class="text-center">
         {{ range where .Site.RegularPages "Type" "jots" }}
