Move to Colfax font

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,6 +10,7 @@ html {
 body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: subpixel-antialiased;
+  font-family: "colfax", sans-serif;
 }
 
 a {
