Less gaudy greeting message

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,10 +4,9 @@
   <body>
     {{ partial "header.html" . }}
 
-    <div class="container mt-20 px-4 prose sm:prose-lg text-center">
+    <div class="container px-4 prose sm:prose-lg text-center" style="margin-top: 3rem;">
       <div>
-        <h1>Hi, I'm Nisanth 👋</h1>
-        <h3 class="font-normal">I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML. Welcome to my corner of the web!</h3>
+        <h3 class="font-normal">Hi 👋 I'm Nisanth Chunduru. I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML. Welcome to my corner of the web!</h3>
       </div>
       <div class="border-t" style="margin-top: 2rem;">
         <h2 style="margin-top: 2rem;">Posts</h2>
