--- a/layouts/jots/single.html
+++ b/layouts/jots/single.html
@@ -18,7 +18,7 @@
         <h1 class="text-center" style="margin-bottom: 0.5rem;">{{ .Title }}</h1>
         <p class="article-date text-center" style="margin-top: 0.5rem">{{ .Date.Format "January 2, 2006" }}</p>
 
-        <div class="article-content">{{ .Content }}</div>
+        <div style="text-align: justify; overflow-wrap: break-word;">{{ .Content }}</div>
       </div>
     </div>
 
