--- a/layouts/hire/single.html
+++ b/layouts/hire/single.html
@@ -14,7 +14,7 @@
         </span>
       </a>
 
-      {{ .Content }}
+      <div style="text-align: justify; overflow-wrap: break-word;">{{ .Content }}</div>
     </div>
 
     {{ partial "footer.html" . }}
