Use relative URLs for CSS & JS

--- a/layouts/jots/list.html
+++ b/layouts/jots/list.html
@@ -36,6 +36,6 @@
 
     {{ partial "footer.html" . }}
 
-    <script type="text/javascript" src="{{ .Site.BaseURL }}/js/main.js"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
   </body>
 </html>
