--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,14 +6,14 @@
 
   <!-- Fonts -->
 
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/vendor/fonts.css">
+  <link rel="stylesheet" href="/css/vendor/fonts.css">
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
   <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
   <!-- Vendor stylesheets -->
 
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/tailwind.compiled.css">
+  <link rel="stylesheet" href="/css/tailwind.compiled.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,8 +21,9 @@
 
   <!-- Custom stylesheets -->
 
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/main.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/pygments-github.css"> <!-- Custom syntax highlighting -->
+  <link rel="stylesheet" href="/css/main.css">
+  <!-- Custom syntax highlighting -->
+  <link rel="stylesheet" href="/css/pygments-github.css">
 
   <meta name="google-site-verification" content="CIGnBZCqH2WX_UMtk5WQP3UJg6UIk_2HNNlBAnLFatA" />
 </head>
