--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,6 +25,6 @@
 
     {{ partial "footer.html" . }}
 
-    <script type="text/javascript" src="{{ .Site.BaseURL }}/js/main.js"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
   </body>
 </html>
