Center content horizontally

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="container px-4 pt-8 my-8 border-t text-center">
+<div class="container mx-auto px-4 pt-8 my-8 border-t text-center">
   <p>
     Built with <a href="https://gohugo.io">Hugo</a> & <a href="https://notion.so">Notion</a>. Source code is available at <a href="https://github.com/nisanthchunduru/nisanthchunduru.github.io">GitHub</a>.
   </p>
