--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
   <body>
     {{ partial "header.html" . }}
 
-    <div class="container px-4 prose sm:prose-lg text-center" style="margin-top: 3rem;">
+    <div class="container mx-auto px-4 prose sm:prose-lg text-center" style="margin-top: 3rem;">
       <div>
         <h3 class="font-normal">Hi 👋 I'm Nisanth Chunduru. I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML. Welcome to my <a href="https://github.com/nisanthchunduru/nisanthchunduru.github.io">open source</a> blog!</h3>
       </div>
