Increase blog width

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -4,7 +4,7 @@
   <body>
     {{ partial "header.html" . }}
 
-    <div class="container mx-auto mt-8 px-4 prose sm:prose-lg">
+    <div class="container mx-auto mt-8 px-4 prose sm:prose-lg max-w-none">
       <a href="/" class="inline-flex items-center py-2 px-4 border rounded-full">
         <svg class="h-2 w-2" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
           <path d="m 12 2 c 0 -0.265625 -0.105469 -0.519531 -0.292969 -0.707031 c -0.390625 -0.390625 -1.023437 -0.390625 -1.414062 0 l -6 6 c -0.1875 0.1875 -0.292969 0.441406 -0.292969 0.707031 s 0.105469 0.519531 0.292969 0.707031 l 6 6 c 0.390625 0.390625 1.023437 0.390625 1.414062 0 c 0.1875 -0.1875 0.292969 -0.441406 0.292969 -0.707031 s -0.105469 -0.519531 -0.292969 -0.707031 l -5.292969 -5.292969 l 5.292969 -5.292969 c 0.1875 -0.1875 0.292969 -0.441406 0.292969 -0.707031 z m 0 0" fill="#2e3436"/>
