Use a different font CDN to serve "Source Sans Pro" font

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,25 +4,11 @@
   <title>Nisanth Chunduru</title>
   <link rel="shortcut icon" href="/images/logo.svg">
 
-  <!-- Fonts -->
-
-  <link rel="stylesheet" href="/css/vendor/fonts.css">
-  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-  <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-
-  <!-- Vendor stylesheets -->
+  <!-- <link rel="stylesheet" href="/css/vendor/fonts.css"> -->
+  <link href=" https://cdn.jsdelivr.net/npm/source-sans-pro@3.6.0/source-sans-pro.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="/css/tailwind.compiled.css">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-
-  <!-- Custom stylesheets -->
-
   <link rel="stylesheet" href="/css/main.css">
-  <!-- Custom syntax highlighting -->
   <link rel="stylesheet" href="/css/pygments-github.css">
 
   <meta name="google-site-verification" content="CIGnBZCqH2WX_UMtk5WQP3UJg6UIk_2HNNlBAnLFatA" />
