--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,7 +5,10 @@
   <link rel="shortcut icon" href="/images/logo.svg">
 
   <!-- <link rel="stylesheet" href="/css/vendor/fonts.css"> -->
-  <link href=" https://cdn.jsdelivr.net/npm/source-sans-pro@3.6.0/source-sans-pro.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="/css/tailwind.compiled.css">
   <link rel="stylesheet" href="/css/main.css">
