--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
 
     <div class="container mx-auto px-4 prose sm:prose-lg max-w-none text-center" style="margin-top: 3rem;">
       <div>
-        <h3 class="font-normal">Hi 👋 I'm Nisanth Chunduru. I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML. Welcome to my <a href="https://github.com/nisanthchunduru/nisanthchunduru.github.io">open source</a> blog!</h3>
+        <h3 class="font-normal">Hi 👋 I'm Nisanth Chunduru. I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML, especially Deep Learning and Generative AI. Welcome to my blog!</h3>
       </div>
       <div class="border-t" style="margin-top: 2rem;">
         <h2 style="margin-top: 2rem;">Posts</h2>
