Move to Adelle Sans font

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,8 +4,7 @@
   <title>Nisanth Chunduru</title>
   <link rel="shortcut icon" href="/images/logo.svg">
 
-  <!-- <link rel="stylesheet" href="/css/vendor/fonts.css"> -->
-  <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet">
+  <link rel="stylesheet" href="/css/vendor/fonts.css">
 
   <link rel="stylesheet" href="/css/tailwind.compiled.css">
   <link rel="stylesheet" href="/css/main.css">
