--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,10 +7,10 @@ html {
   max-width: 768px;
 }
 
-body, a, .article-date {
+body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: subpixel-antialiased;
-  font-family: 'Avenir' !important;
+  font-family: 'adelle-sans', system-ui, sans-serif;
 }
 
 a {
