Move to Avenir Next font

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,7 +10,7 @@ html {
 body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: subpixel-antialiased;
-  font-family: 'adelle-sans', system-ui, sans-serif;
+  font-family: 'avenir-next', system-ui, sans-serif;
 }
 
 a {
