--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,7 +4,7 @@
   <title>Nisanth Chunduru</title>
   <link rel="shortcut icon" href="/images/logo.svg">
 
-  <link rel="stylesheet" href="/css/vendor/fonts.css">
+  <link rel="stylesheet" href="https://cdn.statically.io/gh/nisanthchunduru/fonts/master/fonts.css">
 
   <link rel="stylesheet" href="/css/tailwind.compiled.css">
   <link rel="stylesheet" href="/css/main.css">
