--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -15,8 +15,8 @@
       </a>
 
       <div class="article mt-6">
-        <h1 class="text-center" style="margin-bottom: 0.5rem;">{{ .Title }}</h1>
-        <p class="article-date text-center" style="margin-top: 0.5rem">{{ .Date.Format "January 2, 2006" }}</p>
+        <h1 class="text-center text-2xl" style="margin-bottom: 0.5rem;">{{ .Title }}</h1>
+        <p class="article-date text-center" style="margin-top: 0.5rem">{{ .Date.Format "Jan 2, 2006" }}</p>
 
         <div style="text-align: justify; overflow-wrap: break-word;">{{ .Content }}</div>
       </div>
