--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,10 @@
 <html>
   {{ partial "head.html" . }}
 
-  <body>
+  <body class="flex flex-col" style="min-height: 100vh;">
     {{ partial "header.html" . }}
 
-    <div class="container mx-auto px-4 max-w-none">
+    <div class="container mx-auto px-4 max-w-none" style="flex: 1">
       <div>
         <p class="mt-6 md:mt-12" style="text-align: justify; line-height: 1.75;">Hi 👋 I'm Nisanth Chunduru. I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML, especially Deep Learning and Generative AI. Welcome to my blog!</p>
       </div>
